--- a/ml/notebooks/eda_preprocessing.ipynb
+++ b/ml/notebooks/eda_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "d64b4221",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns "
+    "import seaborn as sns \n",
+    "from datasets import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6ae92a98",
    "metadata": {},
    "outputs": [
@@ -23,8 +24,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Repo card metadata block was not found. Setting CardData to empty.\n",
-      "Generating train split: 100%|██████████| 84106/84106 [00:00<00:00, 3119367.33 examples/s]"
+      "/home/thanhfvux/GrammarFixer/.env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Repo card metadata block was not found. Setting CardData to empty.\n"
      ]
     },
     {
@@ -39,13 +41,6 @@
       "})\n",
       "dict_keys(['train'])\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -57,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7166fcf9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b3281dbd",
    "metadata": {},
    "outputs": [],
@@ -89,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c5f1e056",
    "metadata": {},
    "outputs": [
@@ -97,23 +92,49 @@
      "data": {
       "text/plain": [
        "(Index(['sentence', 'broken', 'annotator', 'tags', 'edit', '__index_level_0__'], dtype='object'),\n",
-       " <bound method DataFrame.info of                                                 sentence  ... __index_level_0__\n",
-       " 69919  One day , he took part in a competition intend...  ...             69919\n",
-       " 44407  However , she never imagined how dangerous thi...  ...             44407\n",
-       " 16447  Consequently , they probably fail to experienc...  ...             16447\n",
-       " 83553  They are scared of what a woman can do and som...  ...              8607\n",
-       " 29419  Today private vehicle become pride of the life...  ...             29419\n",
-       " ...                                                  ...  ...               ...\n",
-       " 18345  But she is boyfriend live upstate and hasn't g...  ...             18345\n",
-       " 49495  On the other hand , studies showed , in many o...  ...             49495\n",
-       " 15945  But you could been lucky because the summer is...  ...             15945\n",
-       " 1749   In the sea , include the route and port constr...  ...              1749\n",
-       " 37840  I live here with my wonderful family based of ...  ...             37840\n",
+       " <bound method DataFrame.info of                                                 sentence  \\\n",
+       " 69919  One day , he took part in a competition intend...   \n",
+       " 44407  However , she never imagined how dangerous thi...   \n",
+       " 16447  Consequently , they probably fail to experienc...   \n",
+       " 83553  They are scared of what a woman can do and som...   \n",
+       " 29419  Today private vehicle become pride of the life...   \n",
+       " ...                                                  ...   \n",
+       " 18345  But she is boyfriend live upstate and hasn't g...   \n",
+       " 49495  On the other hand , studies showed , in many o...   \n",
+       " 15945  But you could been lucky because the summer is...   \n",
+       " 1749   In the sea , include the route and port constr...   \n",
+       " 37840  I live here with my wonderful family based of ...   \n",
+       " \n",
+       "                                                   broken annotator  \\\n",
+       " 69919  One day , he took part in a competition intend...         0   \n",
+       " 44407  However , she never imagined how dangerous thi...         0   \n",
+       " 16447  Consequently , they probably fail to experienc...         0   \n",
+       " 83553  They are scared of what a woman can do and som...         0   \n",
+       " 29419  Today personal vehicle become pride of the lif...         0   \n",
+       " ...                                                  ...       ...   \n",
+       " 18345  But she is boyfriend live upstate and hasn't g...         0   \n",
+       " 49495  On the other hand , the studies showed , in ma...         0   \n",
+       " 15945  But you can been lucky because the summer is v...         0   \n",
+       " 1749   In the sea , include the route and port constr...         0   \n",
+       " 37840  I live here with my wonderful family based on ...         0   \n",
+       " \n",
+       "              tags                              edit  __index_level_0__  \n",
+       " 69919        noop    -1 -1|||noop|||-NONE-|||-NONE-              69919  \n",
+       " 44407        noop    -1 -1|||noop|||-NONE-|||-NONE-              44407  \n",
+       " 16447    NOUN:NUM  9 10|||R:NOUN:NUM|||live|||lives              16447  \n",
+       " 83553        noop    -1 -1|||noop|||-NONE-|||-NONE-               8607  \n",
+       " 29419         ADJ  1 2|||R:ADJ|||personal|||private              29419  \n",
+       " ...           ...                               ...                ...  \n",
+       " 18345         DET             9 10|||R:DET|||a|||an              18345  \n",
+       " 49495         DET              5 5|||M:DET|||the|||              49495  \n",
+       " 15945  VERB:TENSE  2 3|||R:VERB:TENSE|||can|||could              15945  \n",
+       " 1749          UNK                   7 7|||UNK||||||               1749  \n",
+       " 37840        PREP            8 9|||R:PREP|||on|||of              37840  \n",
        " \n",
        " [58873 rows x 6 columns]>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "e7d72e7b",
    "metadata": {},
    "outputs": [
@@ -140,7 +161,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "33fb5b9a",
    "metadata": {},
    "outputs": [
@@ -169,7 +190,7 @@
        "np.float64(0.17406960746012604)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "494d37ce",
    "metadata": {},
    "outputs": [
@@ -200,7 +221,7 @@
        "(np.float64(0.0), np.float64(8.49285750683675e-05))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "ce16f3b2",
    "metadata": {},
    "outputs": [
@@ -245,7 +266,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "34c49f3e",
    "metadata": {},
    "outputs": [],
@@ -277,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "a7000b66",
    "metadata": {},
    "outputs": [
@@ -298,7 +319,7 @@
        "Name: sentence, Length: 58873, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "ea36521d",
    "metadata": {},
    "outputs": [
@@ -330,7 +351,7 @@
        "Name: broken, Length: 58873, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "306127ed",
    "metadata": {},
    "outputs": [
@@ -425,17 +446,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                sentence  ... __index_level_0__\n",
-       "69919  One day , he took part in a competition intend...  ...             69919\n",
-       "44407  However , she never imagined how dangerous thi...  ...             44407\n",
-       "16447  Consequently , they probably fail to experienc...  ...             16447\n",
-       "83553  They are scared of what a woman can do and som...  ...              8607\n",
-       "29419  Today private vehicle become pride of the life...  ...             29419\n",
+       "                                                sentence  \\\n",
+       "69919  One day , he took part in a competition intend...   \n",
+       "44407  However , she never imagined how dangerous thi...   \n",
+       "16447  Consequently , they probably fail to experienc...   \n",
+       "83553  They are scared of what a woman can do and som...   \n",
+       "29419  Today private vehicle become pride of the life...   \n",
        "\n",
-       "[5 rows x 6 columns]"
+       "                                                  broken annotator      tags  \\\n",
+       "69919  One day , he took part in a competition intend...         0      noop   \n",
+       "44407  However , she never imagined how dangerous thi...         0      noop   \n",
+       "16447  Consequently , they probably fail to experienc...         0  NOUN:NUM   \n",
+       "83553  They are scared of what a woman can do and som...         0      noop   \n",
+       "29419  Today personal vehicle become pride of the lif...         0       ADJ   \n",
+       "\n",
+       "                                   edit  __index_level_0__  \n",
+       "69919    -1 -1|||noop|||-NONE-|||-NONE-              69919  \n",
+       "44407    -1 -1|||noop|||-NONE-|||-NONE-              44407  \n",
+       "16447  9 10|||R:NOUN:NUM|||live|||lives              16447  \n",
+       "83553    -1 -1|||noop|||-NONE-|||-NONE-               8607  \n",
+       "29419  1 2|||R:ADJ|||personal|||private              29419  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "886e52f9",
    "metadata": {},
    "outputs": [],
@@ -457,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "0bf74a64",
    "metadata": {},
    "outputs": [],
@@ -481,41 +514,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "cd391e44",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'column_names'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32m/tmp/ipykernel_13128/2022103977.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m train_tok = train_df.map(\n\u001b[32m      2\u001b[39m     preprocess,\n\u001b[32m      3\u001b[39m     batched=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     remove_columns=train_df.column_names\n\u001b[32m      5\u001b[39m )\n\u001b[32m      6\u001b[39m \n\u001b[32m      7\u001b[39m val_tok = val_df.map(\n",
-      "\u001b[32m~/GrammarFixer/.env/lib/python3.12/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6317\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6318\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6319\u001b[39m         ):\n\u001b[32m   6320\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6321\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute 'column_names'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 58873/58873 [00:01<00:00, 31027.77 examples/s]\n",
+      "Map: 100%|██████████| 8411/8411 [00:00<00:00, 39043.75 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "train_tok = train_df.map(\n",
+    "\n",
+    "train_ds = Dataset.from_pandas(train_df, preserve_index=False)\n",
+    "val_ds   = Dataset.from_pandas(val_df, preserve_index=False)\n",
+    "\n",
+    "train_tok = train_ds.map(\n",
     "    preprocess,\n",
     "    batched=True,\n",
-    "    remove_columns=train_df.column_names\n",
+    "    remove_columns=train_ds.column_names\n",
     ")\n",
     "\n",
-    "val_tok = val_df.map(\n",
+    "val_tok = val_ds.map(\n",
     "    preprocess,\n",
     "    batched=True,\n",
-    "    remove_columns=val_df.column_names\n",
+    "    remove_columns=val_ds.column_names\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c6163b6",
+   "metadata": {},
+   "source": [
+    "## collator = “đóng gói batch + pad cho khớp shape”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "70137985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-23 21:42:00.897514: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-23 21:42:01.149108: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-12-23 21:42:02.380448: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "/home/thanhfvux/GrammarFixer/.env/lib/python3.12/site-packages/keras/src/export/tf2onnx_lib.py:8: FutureWarning: In the future `np.object` will be defined as the corresponding NumPy scalar.\n",
+      "  if not hasattr(np, \"object\"):\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSeq2SeqLM, DataCollatorForSeq2Seq\n",
+    "\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+    "\n",
+    "data_collator = DataCollatorForSeq2Seq(\n",
+    "    tokenizer=tokenizer,\n",
+    "    model=model,\n",
+    "    padding=True  \n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "21a11690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 58873/58873 [00:00<00:00, 2300630.37 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 8411/8411 [00:00<00:00, 1514609.78 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_tok.save_to_disk(\"/home/thanhfvux/GrammarFixer/ml/data/processed/train_tok\")\n",
+    "val_tok.save_to_disk(\"/home/thanhfvux/GrammarFixer/ml/data/processed/val_tok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4d01ee71",
+   "id": "1f216de0",
    "metadata": {},
    "outputs": [],
    "source": []
